libs/image/kis_node.h
@@ -147,7 +147,9 @@ public:
      */
     void invalidateFrames(const KisTimeSpan &range, const QRect &rect);
 
-    void handleKeyframeChannelUpdate(const KisTimeSpan &range, const QRect &rect);
+    virtual void handleKeyframeChannelFrameChange(const KisKeyframeChannel *channel, int time);
+    virtual void handleKeyframeChannelFrameAdded(const KisKeyframeChannel *channel, int time);
+    virtual void handleKeyframeChannelFrameAboutToBeRemoved(const KisKeyframeChannel *channel, int time);
 
     /**
      * Informs that the current world time should be changed.
@@ -371,7 +373,10 @@ protected:
 
 protected:
     void addKeyframeChannel(KisKeyframeChannel* channel) override;
+
 private:
+
+    void handleKeyframeChannelUpdateImpl(const KisKeyframeChannel *channel, int time);
 
     friend class KisNodeFacade;
     friend class KisNodeTest;
