libs/image/kis_paint_layer.cc
@@ -33,11 +33,15 @@
 #include "kis_layer_properties_icons.h"
 
 #include "kis_onion_skin_cache.h"
+#include "kis_time_span.h"
+
 
 struct Q_DECL_HIDDEN KisPaintLayer::Private
 {
 public:
-    Private() : contentChannel(0) {}
+    Private(KisPaintLayer *_q) : q(_q), contentChannel(0) {}
+
+    KisPaintLayer *q;
 
     KisPaintDeviceSP paintDevice;
     QBitArray        paintChannelFlags;
@@ -49,11 +53,13 @@ public:
     KisOnionSkinCache onionSkinCache;
 
     bool onionSkinVisibleOverride = true;
+
+    void handleRasterKeyframeChannelUpdateImpl(const KisKeyframeChannel *channel, int time);
 };
 
 KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opacity, KisPaintDeviceSP dev)
     : KisLayer(image, name, opacity)
-    , m_d(new Private())
+    , m_d(new Private(this))
 {
     Q_ASSERT(dev);
 
@@ -66,7 +72,7 @@ KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opac
 
 KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opacity)
     : KisLayer(image, name, opacity)
-    , m_d(new Private())
+    , m_d(new Private(this))
 {
     Q_ASSERT(image);
 
@@ -76,7 +82,7 @@ KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opac
 
 KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opacity, const KoColorSpace * colorSpace)
     : KisLayer(image, name, opacity)
-    , m_d(new Private())
+    , m_d(new Private(this))
 {
     if (!colorSpace) {
         Q_ASSERT(image);
@@ -90,7 +96,7 @@ KisPaintLayer::KisPaintLayer(KisImageWSP image, const QString& name, quint8 opac
 KisPaintLayer::KisPaintLayer(const KisPaintLayer& rhs)
     : KisLayer(rhs)
     , KisIndirectPaintingSupport()
-    , m_d(new Private)
+    , m_d(new Private(this))
 {
     const bool copyFrames = (rhs.m_d->contentChannel != 0);
     if (!copyFrames) {
@@ -316,12 +322,68 @@ KisKeyframeChannel *KisPaintLayer::requestKeyframeChannel(const QString &id)
     if (id == KisKeyframeChannel::Raster.id()) {
         m_d->contentChannel = m_d->paintDevice->createKeyframeChannel(KisKeyframeChannel::Raster);
         m_d->contentChannel->setOnionSkinsEnabled(onionSkinEnabled());
+
         enableAnimation();
         return m_d->contentChannel;
     }
 
     return KisLayer::requestKeyframeChannel(id);
 }
+
+void KisPaintLayer::Private::handleRasterKeyframeChannelUpdateImpl(const KisKeyframeChannel *channel, int time)
+{
+    const KisTimeSpan affectedRange = channel->affectedFrames(time);
+    const QRect affectedRect = channel->affectedRect(time);
+
+    q->invalidateFrames(affectedRange, affectedRect);
+
+    bool affectsCurrentFrame = false;
+    KisImageWSP image = q->image();
+    if (image) {
+        KisDefaultBoundsSP bounds(new KisDefaultBounds(image));
+        affectsCurrentFrame = affectedRange.contains(bounds->currentTime());
+    }
+
+    if (contentChannel->onionSkinsEnabled()) {
+        QRect rc = KisOnionSkinCompositor::instance()->updateExtentOnAddition(paintDevice, time);
+
+        if (affectsCurrentFrame) {
+            rc |= affectedRect;
+        }
+
+        q->setDirty(rc);
+    } else {
+        q->setDirty(affectedRect);
+    }
+}
+
+void KisPaintLayer::handleKeyframeChannelFrameChange(const KisKeyframeChannel *channel, int time)
+{
+    if (channel->id() == KisKeyframeChannel::Raster.id()) {
+        KIS_SAFE_ASSERT_RECOVER_NOOP(0 && "raster channel is not supposed to emit sigKeyframeChanged");
+    } else {
+        KisLayer::handleKeyframeChannelFrameChange(channel, time);
+    }
+}
+
+void KisPaintLayer::handleKeyframeChannelFrameAdded(const KisKeyframeChannel *channel, int time)
+{
+    if (channel->id() == KisKeyframeChannel::Raster.id()) {
+        m_d->handleRasterKeyframeChannelUpdateImpl(channel, time);
+    } else {
+        KisLayer::handleKeyframeChannelFrameAdded(channel, time);
+    }
+}
+
+void KisPaintLayer::handleKeyframeChannelFrameAboutToBeRemoved(const KisKeyframeChannel *channel, int time)
+{
+    if (channel->id() == KisKeyframeChannel::Raster.id()) {
+        m_d->handleRasterKeyframeChannelUpdateImpl(channel, time);
+    } else {
+        KisLayer::handleKeyframeChannelFrameAboutToBeRemoved(channel, time);
+    }
+}
+
 
 bool KisPaintLayer::supportsKeyframeChannel(const QString &id)
 {
