libs/image/kis_raster_keyframe_channel.cpp
@@ -249,12 +249,14 @@ void KisRasterKeyframeChannel::insertKeyframe(int time, KisKeyframeSP keyframe, 
 
 void KisRasterKeyframeChannel::removeKeyframe(int time, KUndo2Command *parentUndoCmd)
 {
+    emit sigRemovingKeyframe(this, time);
+
     KisRasterKeyframeSP rasterKey = keyframeAt<KisRasterKeyframe>(time);
     if (rasterKey) {
         m_d->frameIDTimesMap.remove(rasterKey->frameID(), time);
     }
 
-    KisKeyframeChannel::removeKeyframe(time, parentUndoCmd);
+    KisKeyframeChannel::removeKeyframeImpl(time, parentUndoCmd);
 
     if (time == 0) { // There should always be a raster frame on frame 0.
         addKeyframe(time, parentUndoCmd);
